assets/css/style.css
/* ... */
.info p{
	color:#353535;
	font-family:'Lato-Light';
	text-align:center;
	text-transform:uppercase;
}
.header-entry{
	text-align:center;
}
.header-entry h1.title{
	font-family: 'Lato-Semibold';
	color:#353535;
	font-size:18px;	
	margin:10px 0;
	text-transform:uppercase;
}
.header-entry h1.title a{
	color:#353535;
}
.cat-name{
	color:#c53f27;
	font-size:12px;
	font-family: 'Lato-Light';
}
.post-date{
	color:#808080;
	font-size:14px;
	font-family: 'Lato-Hairline';
}
.entry-content{
	font-family: 'Lato-Regular';
	font-size:14px;
	color:#606060;
	text-align:center;
}
.entry-content a{
	background:#c53f27;
	font-family: 'Lato-Regular';
	color:#fff;
	text-transform:uppercase;
	display:inline-block;
}
.entry-footer{
	border-top:1px solid #bfbfbf;
	border-bottom:1px solid #bfbfbf;
}
.entry-footer .entry-meta{
	float:left;
	font-family:'Lato-Light';
	color:#606060;
}
.entry-footer .social{
	float:right;
	font-family:'Lato-Light';
	color:#000;
}
.entry-footer .social .fa{
	color:#000;
}
.hovereffect {
	box-shadow:0 0 15px 0 rgba(0,0,0,.15);
	-moz-box-shadow:0 0 15px 0 rgba(0,0,0,.15);
	-webkit-box-shadow:0 0 15px 0 rgba(0,0,0,.15);
	position:relative;
	width:100%;
	height:100%;
	overflow:hidden;
}
.hovereffect img{
	-webkit-transition: all 1s ease; /* Safari and Chrome */
  	-moz-transition: all 1s ease; /* Firefox */
  	-o-transition: all 1s ease; /* IE 9 */
  	-ms-transition: all 1s ease; /* Opera */
  	transition: all 1s ease;
}
.hovereffect:hover img {
    -webkit-transform:scale(1.25); /* Safari and Chrome */
    -moz-transform:scale(1.25); /* Firefox */
    -ms-transform:scale(1.25); /* IE 9 */
    -o-transform:scale(1.25); /* Opera */
     transform:scale(1.25);
}
.hovereffect .overlay {
	width:100%;
	height:74%;
	position:absolute;
	top:13%;
	left:0;
	background-color:rgba(36,36,36,0.5);
	text-align:center;
	font-family: 'Lato-Regular';
}
.hovereffect .overlay h3.package{
	font-family: 'Lato-Bold';
	color:#fff;
	margin-bottom:10px;
	text-transform:uppercase;
	font-size:24px;
}
.hovereffect .overlay h3.package small{
	font-size:13px;
	display:block;
	line-height:1.5em;
	color:#fff;
}
.hovereffect .overlay .time{
	min-height: 55px;
    vertical-align: middle;
    display: inline-block;
    text-align: center;
    padding: 10px 10% 15px;
}
.hovereffect .overlay .time h6{
	font-family: 'Lato-Regular';
	text-transform:capitalize;
	color:#eee;
	margin:0;
	font-size:14px;
}
.hovereffect .overlay .time p{
	margin:0;
	font-size:14px;
	font-family: 'Lato-Regular';
	color:#dcdcdc;
}
.hovereffect .overlay .line{
	height:1px;
	display:block;
	background:#eee;
	margin:5px 0;
}
.hovereffect .overlay .price{
	font-family: 'Lato-Bold';
	font-size:24px;
	color:#fff;
}
.hovereffect .overlay .price small{
	font-size:18px;
	color:#fff;
}
.table{
	margin-top:20px;
}
.table > thead > tr > th, .table > tbody > tr > th, .table > tbody > tr > td{
	color:#313131;
	font-family: 'Lato-Regular';
}
.table > thead > tr > th, .table > tbody > tr > th{
	font-family: 'Lato-Bold';
	text-transform:uppercase;
}
.table > tbody > tr > td{
	font-family: 'Lato-Light';	
}
.table > thead > tr > th{
	border-bottom:1px solid #353535;		
}
.table > thead:first-child > tr:first-child > th{
	border-top:1px solid #353535;
}
.table > tbody > tr > td, .table > tbody > tr > th, .table > thead > tr > td, .table > thead > tr > th{
    border-top:1px solid #353535;
	text-align:center;
	vertical-align:middle;
}
.table > tbody > tr > th{
	text-align:left;
}
.form-control {
    color: #606060;
    border: 1px solid #454545;
    border-radius: 0;
    -webkit-box-shadow:none;
    box-shadow:none;
}
.btn {
    margin-bottom: 0;
    font-family: 'Lato-Bold';
	text-transform:uppercase;
    border-radius: 0;
}
.btn-default{
    color: #c53f27;
    background-color: #fff;
    border-color: #c53f27;
}
.btn-default:hover{
    color: #fff;
    background-color: #c53f27;
    border-color: #c53f27;
}
.input-group-btn{
	width:auto;
}
.input-group-btn > .btn{
	padding:0;
	background:none;
}
.input-group-btn:first-child > .btn, .input-group-btn:first-child > .btn-group{
	margin-right:4px;
}
.input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group{
	margin-left:4px;
}
.input-group .form-control{
	border:1px solid #bfbfbf;
	padding:0;
	text-align:center;
}
.input-group{
	margin:0 auto;
}
.back-to-top {
	background:#353535;
	text-align:center;
	cursor: pointer;
	position: fixed;
	bottom: 0;
	display:none;
}
.back-to-top .fa{
	color:#eee;
}
.nav-home{
	position:absolute;
	top:0;
	z-index:9999;
	width:100%;
}
.nav-home .navbar{
	background:transparent;
	margin:0 auto;
}
.navbar-brand{
	display:block;
}
.navbar {
	border:none;
	margin:0;
    background-color: #fff;
}
.navbar .navbar-nav > li:last-child > a{
	display:inline-block;
	padding:0 7px;
}
.navbar .navbar-nav > li > a{
	color:#c0c0c0;
	font-size:16px;
	font-family: 'Lato-Bold';
	padding:0 25px;
	line-height:126px;
	text-transform:uppercase;
}
.navbar .navbar-nav > li > a:hover,
.navbar .navbar-nav > li > a:focus,
.navbar .navbar-nav > .active > a,
.navbar .navbar-nav > .active > a:hover,
.navbar .navbar-nav > .active > a:focus {
	color: #c53f27;
	background:transparent;
}
.footer-widget{
	background:#fff;
}
.footer-widget .fa{
	border:1px solid #6d6a63;
	color: #353535;
}
.footer-widget p{
	color:#353535;
	font-family: 'Lato-Regular';
}
.footer{
	background:#242424;
}
.footer p{
	text-align:center;
	line-height:90px;
	font-size:16px;
	font-family: 'Lato-Light';
	color:#eee;
	margin:0;
}
.footer-widget .block{
	float:left;
}
#sidebar{
	float:left;
	background:#fff;
	box-shadow:0 0 15px 0 rgba(0,0,0,.15);
	-moz-box-shadow:0 0 15px 0 rgba(0,0,0,.15);
	-webkit-box-shadow:0 0 15px 0 rgba(0,0,0,.15);
}
#sidebar ul{
	list-style:none;
	margin:0;
	padding:0;
}
.widget-title{
	font-family: 'Lato-Bold';
	color:#454545;
	margin:0;
	text-transform:capitalize;
}
.widget_categories a{
	font-family: 'Lato-Light';
	color:#606060;
	display:block;
}
.widget_recent_posts li{
	border-bottom:1px dotted #cdcdcd;
}
/* ... */

